--- a/layout.css
+++ b/layout.css
@@ -1,8 +1,13 @@
 @charset "utf-8";
 
 body {
-    background: grey;
-    width: 90%;
+    background: lightcyan;
+    width: 80%;
     min-width: 660px;
     max-width: 960px;
+    font-family: 'Times New Roman', serif;
+}
+
+header {
+    width: 70%;
 }
